[tool.poetry]
name = "planobs"
version = "0.7.3"
description = "Plan observations with the Zwicky Transient Facility"
authors = ["Simeon Reusch <simeon.reusch@desy.de>"]
maintainers = ["Simeon Reusch <simeon.reusch@desy.de>"]
license = "BSD-3-Clause"
repository = "https://github.com/simeonreusch/planobs"
readme = "README.md"
classifiers = [
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
]
keywords = ["astroparticle physics", "science", "multimessenger astronomy", "ZTF"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
astroplan = ">=0.7"
astropy = ">=5.0"
Flask = {version = "^2.1.3", optional = true}
geopandas = ">=0.11,<0.14"
pandas = ">=1.4.3"
penquins = ">=2.2.0"
matplotlib = ">=3.2"
Shapely = ">=1.8.2"
slackeventsapi = {version = "^3.0.1", optional = true}
tqdm = ">=4.64.0"
ztfquery = ">=1.18.4"
slackclient = {version = "^2.9.4", optional = true}
gunicorn = {version = "^20.1.0", optional = true}
lxml = ">=4.9"
pydantic = ">=1.0"

[tool.poetry.dev-dependencies]
pydantic = ">=1.10.7"
coveralls = ">=3.3.1"
pytest = ">=7.3.2"
types-requests = "^2.31.0.1"
black = ">=23.1.0"
mypy = ">=0.991,<1.4"

[tool.poetry.extras]
slack = ["Flask", "gunicorn", "slackclient", "slackeventsapi"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
